new facts can now be added to table

--- a/petfax/templates/pets/index.html
+++ b/petfax/templates/pets/index.html
@@ -17,6 +17,10 @@
         </h2>
         <img src="{{ pet.pet_photo }}" alt = "Photo of pet" />
     {% endfor %}
+    
+    <h3>
+        <a href="/facts">See Submitted Facts!</a>
+    </h3>
 
     <h3>
         <a href="/facts/new">Submit Facts Here!</a>
