--- a/petfax/templates/facts/index.html
+++ b/petfax/templates/facts/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Fun Facts!</h1>
+    {% for fact in facts %}
+        <h4>Submitted by {{ fact.submitter }}</h4>
+        <p>{{ fact.fact }}</p>
+    {% endfor %}
+    <h3>
+        <a href="/pets">Back to Pets Page</a>
+    </h3>
 </body>
 </html>
